Java 21 release day: finish Generational ZGC